[gd_scene load_steps=2 format=3 uid="uid://cbomgrq0f78yv"]

[ext_resource type="Script" uid="uid://d16u6udm3h0i7" path="res://main_menu.gd" id="1_nxgnl"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nxgnl")
metadata/main = false

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "الغابة تنادي
"

[node name="Label2" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "Sprites by Kenney
Music by Ted Kerr
Game by YOU!"

[node name="FlowContainer" type="FlowContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="FlowContainer"]
layout_mode = 2
text = "play
"

[node name="Button2" type="Button" parent="FlowContainer"]
layout_mode = 2
text = "Quit

"

[connection signal="pressed" from="FlowContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="FlowContainer/Button2" to="." method="_on_button_2_pressed"]
